--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
                     </suiteXmlFiles>
                     <threadCount>4</threadCount>
                     <forkCount>1</forkCount>
+                    <forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
                 </configuration>
             </plugin>
         </plugins>
