--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run automation framework
-      run: mvn clean test -Dsuite=testng.xml
+      run: mvn clean test -Dsuite=testng.xml -Djava.util.concurrent.ForkJoinPool.common.parallelism=2 -Dthreadcount=2 -Dmaven.test.failure.ignore=true
+
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.2
