--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+
+
     <build>
         <plugins>
             <plugin>
@@ -25,8 +27,9 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>${suite}</suiteXmlFile>
                     </suiteXmlFiles>
-                    <threadCount>4</threadCount>
+                    <threadCount>1</threadCount>
                     <forkCount>1</forkCount>
+                    <useSystemClassLoader>false</useSystemClassLoader>
                     <forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
                 </configuration>
             </plugin>
