--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <version>5.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+
+
 
     </dependencies>
 
