--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       EMAIL: ${{ secrets.EMAIL }}
       PASSWORD: ${{ secrets.PASSWORD }}
+      WEBHOOK_URL: ${{secrets.WEBHOOK_URL}}
 
     steps:
     - uses: actions/checkout@v4
